@startuml hypermedia-state
title API Hypermedia State Diagram
left to right direction
'skinparam linetype polyline
'skinparam linetype ortho
skinparam shadowing false

state "**Logged out**" as logged_out: UI: Login view
state "**Authenticated**" as authenticated: UI: Character select view
state "**Character selected**" as home: UI: Home view
state "**Dungeon combat**" as combat: UI: Dungeon view
state "**Dungeon victory**" as victory: UI: Dungeon view

[*] --> logged_out: **GET /**

logged_out -> authenticated : **Account creation and login**\nPOST /login/signup\nPOST /login/signin
authenticated -> home : **Character selection**\nPOST /characters/{characterId}/select

home --> combat : **Enter dungeon**\nPOST /combats
home --> authenticated : **Logout**\nPOST /login/signout
home --> home : **Inventory management**\nGET /users/{userId}/inventory\nDELETE /users/{userId}/inventory
home --> home : **Character information**\nGET /characters/{characterId}\nGET /characters/{characterId}/equipment
home --> home : **Equipment management**\nPOST /characters/{characterId}/equipment/{itemId}\nDELETE /characters/{characterId}/equipment/{itemId}

combat ---> combat : **Attack monster**\nGET /combats/{combatId}/attack
combat -u> home : **Flee combat**\nGET /combats/{combatId}/run
combat -d-> victory : **Enemy defeated**

victory -> combat : **Next combat**\nGET /combats/{combatId}/next_combat
victory --> home : **Go home**\nGET /combats/{combatId}/go_home

@enduml